# openfluidjs

./: .gitignore  CMakeLists.txt  README.md  index.js  package-lock.json  package.json
src/: OpenFLUIDjsWrapper.cpp
tests/: 00basic.js  10data.js  20simulation.js
tests/Generators.PRJ/IN/: checkgenerators.fluidx
